--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/LoginView.xaml
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/LoginView.xaml
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BethanyPieShop.Core.Views.LoginView">
-  <ContentView.Content>
+             x:Class="BethanyPieShop.Core.Views.LoginView"
+             xmlns:controls="clr-namespace:BethanyPieShop.Core.Controls;assembly=BethanyPieShop.Core"
+             xmlns:utility="clr-namespace:BethanyPieShop.Core.Utility;assembly=BethanyPieShop.Core"
+             utility:ViewModelLocator.AutoWireViewModel="True"
+             >
+    <ContentPage.Content>
       <StackLayout>
           <Label Text="Hello Xamarin.Forms! - Login Page" />
       </StackLayout>
-  </ContentView.Content>
-</ContentView>
+  </ContentPage.Content>
+</ContentPage>
