--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/MenuView.xaml
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/MenuView.xaml
@@ -1,10 +1,37 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BethanyPieShop.Core.Views.MenuView">
-  <ContentView.Content>
-      <StackLayout>
-          <Label Text="Hello Xamarin.Forms!" />
-      </StackLayout>
-  </ContentView.Content>
-</ContentView>
+             x:Class="BethanyPieShop.Core.Views.MenuView"
+             xmlns:behaviors="clr-namespace:BethanyPieShop.Core.Behaviors"
+             xmlns:templates="clr-namespace:BethanyPieShop.Core.Templates"
+             xmlns:utility="clr-namespace:BethanyPieShop.Core.Utility;assembly=BethanyPieShop.Core"
+             utility:ViewModelLocator.AutoWireViewModel="True"
+             Title=" ">
+    <Grid RowSpacing="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="8*" />
+        </Grid.RowDefinitions>
+        <Grid 
+            Grid.Row="0">
+            <Image Source="carousel1.jpg" Aspect="AspectFill"></Image>
+            <Grid BackgroundColor="#444444" Opacity="0.8"/>
+            <Label Text="{Binding WelcomeText}" Style="{StaticResource MenuLabelStyle}"/>
+        </Grid>
+        <Grid Grid.Row="1">
+            <ListView ItemsSource="{Binding MenuItems}"  CachingStrategy="RecycleElement"
+                SeparatorVisibility="None" HasUnevenRows="True" >
+                <ListView.Behaviors>
+                    <behaviors:EventToCommandBehavior EventName="ItemTapped" Command="{Binding MenuItemTappedCommand}"></behaviors:EventToCommandBehavior>
+                </ListView.Behaviors>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <templates:MenuItemTemplate />
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+    </Grid>
+</ContentPage>
