--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/App.xaml
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/App.xaml
@@ -329,6 +329,16 @@
                 <Setter Property="HorizontalOptions" Value="Start"></Setter>
             </Style>
 
+            
+            <Style x:Key="ValidationErrorLabelStyle"
+                   TargetType="{x:Type Label}">
+                <Setter Property="TextColor"
+                           Value="{StaticResource ErrorColor}" />
+                <Setter Property="FontSize"
+                           Value="{StaticResource LittleSize}" />
+            </Style>
+
+            <converters:FirstValidationErrorConverter x:Key="FirstValidationErrorConverter" />
             <converters:ItemTappedConverter x:Key="LocalItemTappedConverter"></converters:ItemTappedConverter>
             <converters:MenuIconConverter x:Key="LocalMenuIconConverter"></converters:MenuIconConverter>
             <converters:CurrencyConverter x:Key="LocalCurrencyConverter"></converters:CurrencyConverter>
