--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/BethanyNavigationPage.xaml
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/BethanyNavigationPage.xaml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <NavigationPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BethanyPieShop.Core.Views.BethanyNavigationPage">
+             x:Class="BethanyPieShop.Core.Views.BethanyNavigationPage"
+                xmlns:utility="clr-namespace:BethanyPieShop.Core.Utility;assembly=BethanyPieShop.Core"
+             utility:ViewModelLocator.AutoWireViewModel="True"
+                >
  
 </NavigationPage>
