--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/PieCatalogView.xaml
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/Views/PieCatalogView.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BethanyPieShop.Core.Views.PieCatalogView">
+             x:Class="BethanyPieShop.Core.Views.PieCatalogView"
+             xmlns:utility="clr-namespace:BethanyPieShop.Core.Utility;assembly=BethanyPieShop.Core"
+             utility:ViewModelLocator.AutoWireViewModel="True"
+             >
     <ContentPage.Content>
       <StackLayout>
           <Label Text="Hello Xamarin.Forms!" />
